--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,11 @@ html {
   opacity: 0;
   left: 59%;
 }
+#result{
 
+  text-align: center;
+ 
+}
 /* Galeria principal */
 #contenedorGlobalFondoBlanco {
   position: relative;
